# kraken-sdk-trading

./: .gitmodules  AI_ONLY.md  Cargo.toml
api_cli/: .example-env  .gitignore  Cargo.toml  README.md
api_cli/src/: lib.rs  main.rs  oldtests.rs  tests.rs
api_cli/src/brokers/: binance.json  binance.rs  coinbase.json  coinbase.rs  config.rs  kraken.json  kraken.rs  kucoin.json  kucoin.rs  mod.rs
api_cli/src/old/: cli_tester.rs  main.rs
doc_kraken_done/: openapi.json
kraken_cli/: Cargo.toml
kraken_cli/src/: cli_tester.rs  main.rs
kraken_rest_client/: Cargo.toml  README.md
kraken_rest_client/src/: client.rs  lib.rs
kraken_rest_client/src/api/: get_ohlc_data.rs
