[package]
name = "api_cli"
description = "A CLI for financial exchanges"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/100mountains/kraken-sdk/tree/main/api_cli"
keywords = ["kraken", "cli"]
authors = ["100mountains"]
edition = "2021"

[dependencies]

kraken_rest_client = "0.25.0"
kraken_futures_rest_client = "0.25.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"