[package]
name = "kraken_cli"
description = "A CLI for the Kraken Exchange"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/100mountains/kraken-sdk/tree/main/kraken_cli"
keywords = ["kraken", "cli"]
authors = ["100mountains"]
edition = "2021"

[dependencies]

kraken_rest_client = "0.25.0"
kraken_futures_rest_client = "0.25.0"